--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(include)
 
 add_subdirectory(src)
 add_subdirectory(tst)
-add_subdirectory(/lib/googletest)
+add_subdirectory(lib/googletest)
